Move toward custom DidResourceResolver