@@ -1,32 +1,31 @@
 package com.apicatalog.did.resolver;
 
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
 import com.apicatalog.did.Did;
-import com.apicatalog.did.resolver.DidResolutionException.Code;
+import com.apicatalog.did.resolver.DidResolutionException.ErrorCode;
 
-public class DidMethodResolver implements DidResolver {
+public class DidMethodRouter implements DidResolver {
 
     protected final Map<String, DidResolver> resolvers;
 
-    protected DidMethodResolver(final Map<String, DidResolver> resolvers) {
+    protected DidMethodRouter(final Map<String, DidResolver> resolvers) {
         this.resolvers = resolvers;
     }
 
     @Override
-    public ResolvedDidDocument resolve(Did did) throws DidResolutionException {
+    public ResolvedDidDocument resolve(Did did, Map<String, Object> options) throws DidResolutionException {
 
         Objects.requireNonNull(did);
 
         final DidResolver resolver = resolvers.get(did.method());
 
         if (resolver == null) {
-            throw new DidResolutionException(did.toString(), Code.UnsupportedMethod);
+            throw new DidResolutionException(did.toString(), ErrorCode.UNSUPPORTED_METHOD);
         }
-        return resolver.resolve(did);
+        return resolver.resolve(did, options);
     }
 
     public static Builder with(String method, DidResolver resolver) {
@@ -50,7 +49,7 @@ public class DidMethodResolver implements DidResolver {
             if (resolvers.size() == 1) {
                 return resolvers.values().iterator().next();
             }
-            return new DidMethodResolver(Collections.unmodifiableMap(resolvers));
+            return new DidMethodRouter(Map.copyOf(resolvers));
         }
     }
 
